--- a/comms/Makefile
+++ b/comms/Makefile
@@ -1,54 +1,55 @@
-COMMENT = Communication utilities
+    COMMENT = Communication utilities
 
-SUBDIR += acfax
-SUBDIR += airspy
-SUBDIR += aldo
-SUBDIR += atslog
-SUBDIR += bforce
-SUBDIR += bforce-kst
-SUBDIR += bluez-firmware
-SUBDIR += chu
-SUBDIR += comserv
-SUBDIR += gstreamer1-plugins-spandsp
-SUBDIR += hamlib
-SUBDIR += hidapi
-SUBDIR += iwmbt-firmware
-SUBDIR += kermit
-SUBDIR += libimobiledevice
-SUBDIR += libimobiledevice-glue
-SUBDIR += libirman
-SUBDIR += libmodbus
-SUBDIR += libusbmuxd
-SUBDIR += linux-rl9-qt5-qtconnectivity
-SUBDIR += linux-rl9-qt5-qtsensors
-SUBDIR += linux-rl9-qt5-qtserialbus
-SUBDIR += linux-rl9-qt5-qtserialport
-SUBDIR += lirc
-SUBDIR += lrzsz
-SUBDIR += minicom
-SUBDIR += p5-Device-Gsm
-SUBDIR += p5-Device-Modem
-SUBDIR += p5-Device-SerialPort
-SUBDIR += p5-SMS-Send
-SUBDIR += pear-Horde_ActiveSync
-SUBDIR += pear-Horde_SyncMl
-SUBDIR += pr
-SUBDIR += py-pyserial
-SUBDIR += qt5-connectivity
-SUBDIR += qt5-sensors
-SUBDIR += qt5-serialbus
-SUBDIR += qt5-serialport
-SUBDIR += qt6-connectivity
-SUBDIR += qt6-sensors
-SUBDIR += qt6-serialbus
-SUBDIR += qt6-serialport
-SUBDIR += rtl-433
-SUBDIR += rtl-sdr
-SUBDIR += rtlbt-firmware
-SUBDIR += spandsp
-SUBDIR += tits
-SUBDIR += usbmuxd
-SUBDIR += yfklog
-SUBDIR += zssh
+    SUBDIR += acfax
+    SUBDIR += airspy
+    SUBDIR += aldo
+    SUBDIR += atslog
+    SUBDIR += bforce
+    SUBDIR += bforce-kst
+    SUBDIR += bluez-firmware
+    SUBDIR += chu
+    SUBDIR += comserv
+    SUBDIR += gstreamer1-plugins-spandsp
+    SUBDIR += hamlib
+    SUBDIR += hidapi
+    SUBDIR += iwmbt-firmware
+    SUBDIR += kermit
+    SUBDIR += libimobiledevice
+    SUBDIR += libimobiledevice-glue
+    SUBDIR += libirman
+    SUBDIR += libmodbus
+    SUBDIR += libusbmuxd
+    SUBDIR += linux-rl9-qt5-qtconnectivity
+    SUBDIR += linux-rl9-qt5-qtsensors
+    SUBDIR += linux-rl9-qt5-qtserialbus
+    SUBDIR += linux-rl9-qt5-qtserialport
+    SUBDIR += lirc
+    SUBDIR += lrzsz
+    SUBDIR += minicom
+    SUBDIR += p5-Device-Gsm
+    SUBDIR += p5-Device-Modem
+    SUBDIR += p5-Device-SerialPort
+    SUBDIR += p5-SMS-Send
+    SUBDIR += pear-Horde_ActiveSync
+    SUBDIR += pear-Horde_SyncMl
+    SUBDIR += pr
+    SUBDIR += py-pyserial
+    SUBDIR += qt5-connectivity
+    SUBDIR += qt5-sensors
+    SUBDIR += qt5-serialbus
+    SUBDIR += qt5-serialport
+    SUBDIR += qt6-connectivity
+    SUBDIR += qt6-sensors
+    SUBDIR += qt6-serialbus
+    SUBDIR += qt6-serialport
+    SUBDIR += rtl-433
+    SUBDIR += rtl-sdr
+    SUBDIR += rtlbt-firmware
+    SUBDIR += rubygem-ruby-termios
+    SUBDIR += spandsp
+    SUBDIR += tits
+    SUBDIR += usbmuxd
+    SUBDIR += yfklog
+    SUBDIR += zssh
 
 .include <bsd.port.subdir.mk>
