--- a/www/rubygem-faraday-gitlab/Makefile
+++ b/www/rubygem-faraday-gitlab/Makefile
@@ -15,6 +15,7 @@ LICENSE_FILE=	${WRKSRC}/LICENSE.md
 RUN_DEPENDS=	rubygem-faraday-net_http-gitlab>=2.0<3.5:www/rubygem-faraday-net_http-gitlab \
 		rubygem-json-gitlab>=0:devel/rubygem-json-gitlab \
 		rubygem-logger-gitlab>=0:devel/rubygem-logger-gitlab
+BUILD_DEPENDS=	${RUN_DEPENDS}
 
 USES=		cpe gem
 
