--- a/www/rubygem-rack-session/Makefile
+++ b/www/rubygem-rack-session/Makefile
@@ -12,6 +12,7 @@ LICENSE_FILE=	${WRKSRC}/license.md
 
 RUN_DEPENDS=	rubygem-base64>=0.1.0:converters/rubygem-base64 \
 		rubygem-rack>=3.0.0,3:www/rubygem-rack
+BUILD_DEPENDS=	${RUN_DEPENDS}
 
 USES=		gem
 
