--- a/www/rubygem-swd/Makefile
+++ b/www/rubygem-swd/Makefile
@@ -15,6 +15,7 @@ RUN_DEPENDS=	rubygem-activesupport-gitlab>=3:devel/rubygem-activesupport-gitlab 
 		rubygem-attr_required>=0.0.5:devel/rubygem-attr_required \
 		rubygem-faraday-gitlab>=2.0<3:www/rubygem-faraday-gitlab \
 		rubygem-faraday-follow_redirects-gitlab>=0:www/rubygem-faraday-follow_redirects-gitlab
+BUILD_DEPENDS=	${RUN_DEPENDS}
 
 USES=		gem
 
