devel/rubygem-i18n: fix

--- a/devel/rubygem-i18n/Makefile
+++ b/devel/rubygem-i18n/Makefile
@@ -11,6 +11,7 @@ WWW=		https://github.com/ruby-i18n/i18n
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/MIT-LICENSE
 
+BUILD_DEPENDS=	rubygem-concurrent-ruby>=1.0<2:devel/rubygem-concurrent-ruby
 RUN_DEPENDS=	rubygem-concurrent-ruby>=1.0<2:devel/rubygem-concurrent-ruby
 
 USES=		cpe gem
