--- a/devel/py-cffi/Makefile
+++ b/devel/py-cffi/Makefile
@@ -1,12 +1,13 @@
 PORTNAME=	cffi
-PORTVERSION=	1.16.0
+PORTVERSION=	2.0.0
 CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Foreign Function Interface for Python calling C code
-WWW=		https://cffi.readthedocs.io/en/latest/
+WWW=		https://cffi.readthedocs.io/en/latest/ \
+		https://github.com/python-cffi/cffi
 
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE
