french/verbiste: test

--- a/french/verbiste/Makefile
+++ b/french/verbiste/Makefile
@@ -19,7 +19,8 @@ GNU_CONFIGURE=	yes
 INSTALL_TARGET=	install-strip
 SHEBANG_FILES=	${WRKSRC}/examples/*.pl
 
-TEST_TARGET=	check
+#TEST_TARGET=	check
+NO_TEST=	yes
 
 OPTIONS_DEFINE=	GTK2 DOCS EXAMPLES
 
