--- a/science/Makefile
+++ b/science/Makefile
@@ -1,7 +1,19 @@
     COMMENT = Scientific applications
 
     SUBDIR += R-cran-DCluster
+    SUBDIR += R-cran-Epi
+    SUBDIR += R-cran-FAdist
+    SUBDIR += R-cran-bayesm
+    SUBDIR += R-cran-cmprsk
     SUBDIR += R-cran-e1071
+    SUBDIR += R-cran-epicalc
+    SUBDIR += R-cran-etm
+    SUBDIR += R-cran-fastICA
+    SUBDIR += R-cran-kernlab
+    SUBDIR += R-cran-ks
+    SUBDIR += R-cran-snow
+    SUBDIR += R-cran-som
+    SUBDIR += R-cran-udunits2
     SUBDIR += hdf5
     SUBDIR += hdf5-110
     SUBDIR += libaec
