--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1785,6 +1785,7 @@
     SUBDIR += rubygem-activesupport5
     SUBDIR += rubygem-activesupport72
     SUBDIR += rubygem-activesupport80
+    SUBDIR += rubygem-annoy
     SUBDIR += rubygem-ast
     SUBDIR += rubygem-attr_required
     SUBDIR += rubygem-azure_graph_rbac
